--- a/css/style.css
+++ b/css/style.css
@@ -603,11 +603,6 @@ body {
   margin-right: 50px;
 }
 
-.filter-item svg {
-  width: 0;
-  height: 0;
-}
-
 .filter-item:last-child {
   margin-right: 0;
 }
@@ -618,6 +613,7 @@ body {
   font-size: 15px;
   position: relative;
   line-height: 1.8;
+  width: 100%;
 }
 
 .filter-btn:hover {
@@ -907,6 +903,12 @@ body {
   margin-top: 72px;
 }
 
+.additionalItem__inner {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 /*---------------footer-----------------------------*/
 /*---------------footer-----------------------------*/
 .footer {
@@ -1051,6 +1053,7 @@ body {
   .bannerDiscount__button {
     margin: 10px auto;
     z-index: 1;
+    padding: 10px;
   }
 
   .bannerDiscount__discription {
@@ -1218,9 +1221,18 @@ body {
   .cardNav__list {
     grid-template: repeat(3, 1fr)/repeat(2, 1fr);
   }
+
+  /*---------------------------------------*/
+  .cardList-arrow {
+    display: none;
+  }
 }
 /*===========================1000============================*/
 @media (max-width: 1000px) {
+  .container {
+    padding: 0 15px;
+  }
+
   .container__title {
     text-align: center;
   }
@@ -1274,10 +1286,26 @@ body {
 }
 /*===========================600============================*/
 @media (max-width: 600px) {
+  .header {
+    margin-top: 20px;
+  }
+
+  .header__top-inner {
+    justify-content: flex-end;
+  }
+
   .search__form-top {
+    display: flex;
+    flex-direction: column;
     white-space: normal;
   }
 
+  .search__form-buttom {
+    margin-top: 5px;
+    flex-wrap: wrap;
+  }
+
+  /*---------------------------------------*/
   /*---------------------------------------*/
   ul.zg-ul-select {
     border-radius: 2px;
@@ -1291,7 +1319,7 @@ body {
   ul.zg-ul-select li {
     border-radius: 3px;
     display: none;
-    padding: 0.5em;
+    padding: 5px;
   }
   ul.zg-ul-select li.active {
     align-items: center;
@@ -1329,6 +1357,7 @@ body {
     justify-content: space-between;
     font-size: 2em;
     width: auto;
+    margin-top: 10px;
   }
   #selected--zg-ul-select.active {
     border: 1px solid #111;
@@ -1338,20 +1367,49 @@ body {
   }
 
   .filter-item svg {
-    width: 32px;
-    height: 32px;
+    width: 20px;
+    height: 20px;
   }
 
   .filter-box {
     flex-direction: column;
-    margin-top: 10px;
+    top: 33px;
     position: absolute;
     z-index: 1;
     background-color: #fff;
   }
 
   .cardList-wrapper {
-    margin-top: 80px;
+    margin-top: 50px;
+  }
+
+  .filter-item {
+    margin-right: 0;
+  }
+
+  .filter-btn {
+    border-bottom: none;
+    padding-right: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .filter-btn--active span::before {
+    content: '';
+    position: absolute;
+    right: -30px;
+    top: 75%;
+    transform: translateY(-50%);
+    border: 10px solid transparent;
+    border-top: 10px solid #000;
+    opacity: 0.6;
+    transition: all .3s;
+  }
+
+  .filter-btn span:hover:before {
+    cursor: pointer;
+    opacity: 1;
   }
 
   /*---------------------------------------*/
@@ -1360,10 +1418,6 @@ body {
   }
 
   /*---------------------------------------*/
-  .cardList-arrow {
-    display: none;
-  }
-
   /*---------------------------------------*/
   .footer__top-inner {
     margin: 0;
@@ -1394,6 +1448,17 @@ body {
 
   .footer__botton-link:last-child {
     margin-bottom: 0;
+  }
+}
+/*===========================400============================*/
+@media (max-width: 400px) {
+  .container__title {
+    max-width: 220px;
+    align-self: center;
+  }
+
+  .filter-box {
+    top: 64px;
   }
 }
 
